--- a/style/index.css
+++ b/style/index.css
@@ -207,7 +207,7 @@ header .fa-bars{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:url(/imgs/img-4.jpg) no-repeat;
+    background:url(/img-4.jpg) no-repeat;
     background-size: cover;
     opacity: 1;
     z-index: 10;
