--- a/style/media-query.css
+++ b/style/media-query.css
@@ -33,22 +33,9 @@
     .home .content{
         margin-bottom: 50rem;
     }
-}
-@media (max-width:991px){
-    
-   .img-banner {
-    width: 95%;
-   }
-}
-@media (max-width:837px) {
-    .icons i {
-        display: none;
-    }
-}
-@media (max-width:768px){
-
     header .fa-bars{
         display: block;
+        margin-left: -5rem;
     }
 
     header .navbar{
@@ -62,7 +49,9 @@
     header #toggler:checked ~ .navbar{
         clip-path:polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
-
+    header .logo{
+        padding-left: 5rem;
+    }
     header .navbar a{
         margin:1.5rem;
         padding:1.5rem;
@@ -70,6 +59,22 @@
         border:.1rem solid rgba(0,0,0,.1);
         display: block;
     }
+    header {
+        max-height: 70px;
+    }
+}
+@media (max-width:991px){
+    
+   .img-banner {
+    width: 95%;
+   }
+}
+@media (max-width:837px) {
+    .icons i {
+        display: none;
+    }
+}
+@media (max-width:768px){
 
     .home .content h3{
         font-size: 5rem;
@@ -86,7 +91,15 @@
     .icons-container .icons span{
         font-size: 1.7rem;
     }
-    
+    .home .content {
+        max-width: 400px;
+    }
+    header .fa-bars{
+        display: block;
+        justify-content: space-between;
+        margin-left: -2rem;
+    }
+
 }
 
 @media (max-width:450px){
@@ -98,5 +111,7 @@
     .heading{
         font-size: 3rem;
     }
-
+    header .logo{
+        padding-left: 7rem;
+    }
 }
