--- a/style/media-query.css
+++ b/style/media-query.css
@@ -99,9 +99,38 @@
         justify-content: space-between;
         margin-left: -2rem;
     }
-
+    #form {
+        max-width: 560px;
+    }
 }
-
+@media screen and (max-width: 600px){
+    #form {
+        max-width: 460px;
+    }
+}
+@media screen and (max-width: 500px){
+    #form {
+        max-width: 400px;
+    }
+}
+@media screen and (max-width: 440px){
+    #form {
+        max-width: 340px;
+    }
+}
+@media screen and (max-width: 370px){
+    #form {
+        max-width: 280px;
+    }
+    .button-p {
+        margin-right: 0;
+    }
+}
+@media screen and (max-width: 320px){
+    #form {
+        max-width: 250px;
+    }
+}
 @media (max-width:450px){
     
     html{
