--- a/style/index.css
+++ b/style/index.css
@@ -574,37 +574,6 @@ header .fa-bars{
 .fa-arrow-rotate-left {
     margin-left: 45px;
 }
-.main-1,
-.radios,
-.main-3 {
-  border-bottom: 1px solid rgb(155, 153, 153);
-  border-width: thin;
-  max-width: 330px;
-  margin-bottom: 10px;
-  padding-bottom: 15px;
-}
-.main-2 {
-  line-height: 2.5rem;
-  padding-bottom: 10px;
-}
-.main-3 {
-  max-width: 525px;
-}
-.radio {
-  padding: 5px;
-
-}
-textarea {
-  margin-top: 10px;
-  margin-left: -5px;
-  font-size: 17px;
-  font-family: "poppins", sans-serif;
-  font-weight: 400;
-  color: #000;
-  outline: none;
-  border: 1px solid rgba(80, 65, 54, 0.692);
-  padding: 5px 0 0 10px;
-}
 legend {
   font-weight: 600;
   font-family: "Zen Maru Gothic", sans-serif;
@@ -615,29 +584,8 @@ legend {
 fieldset {
   border: 1px solid rgb(133, 129, 129);
 }
-select {
-  padding: 12px;
-  outline: none;
-  border: 1px solid rgb(155, 153, 153);
-  cursor: pointer;
-  border-radius: 3px;
-}
-.main-2, .main-3 {
-  margin-top: 20px;
-}
-.radio {
-  cursor: pointer;
-}
-select:focus {
-  border: 1px solid rgb(0, 0, 0);
-  box-shadow: 1px 1px 1px 1px rgb(180, 179, 179);
-  cursor: pointer;
-}
 select:hover,
 .input-user2:hover {
-  cursor: pointer;
-}
-.checkbox {
   cursor: pointer;
 }
 .input-user:focus {
@@ -663,7 +611,7 @@ input {
 input[type="text"], input[name="email"] {
   font-size: 15px;
   font-weight: 600;
-  font-family: "Raleway", sans-serif;
+  font-family: "poppins", sans-serif;
   letter-spacing: 0.1em;
   text-transform: capitalize;
 }
@@ -672,6 +620,8 @@ input[name="email"] {
 }
 input[type="tel"] {
   font-size: 15px;
+  font-family: "poppins", sans-serif;
+  font-weight: 600;
 }
 input:focus {
   box-shadow: 1px 1px 1px 1px rgb(199, 198, 198);
@@ -684,7 +634,7 @@ input:focus {
   letter-spacing: 0.1em;
 }
 .input-user {
-  width: 50%;
+  width: 99%;
   outline: none;
   padding-right: 2.5rem;
 }
@@ -696,7 +646,7 @@ input:focus {
   left: 2.16%;
   top: -35%;
   transition: all 0.3s;
-  background-color: rgb(248, 248, 239);
+  background-color: rgb(255, 255, 255);
   border-radius: 3px;
   cursor: text;
 }
@@ -706,6 +656,8 @@ input:focus {
 }
 label {
   padding: 0rem 0.3em;
+  font-family: "poppins";
+  font-size: 14px;
 }
 .fa-check {
   color: #219e08;
@@ -746,17 +698,26 @@ label {
   font-size: 9px;
 }
 input {
-  background: linear-gradient(rgb(218, 214, 214), rgb(226, 225, 225));
+  background: rgb(255, 251, 251);
 }
 .input-box label {
-  background: linear-gradient(rgb(218, 214, 214), rgb(226, 225, 225));
+  background: rgb(255, 251, 251);
 }
-
 .fa-chevron-right {
   padding-left: 1px;
   transition: all .2s;
-  color: rgba(0, 0, 0, 0.89);
+  color: rgba(15, 14, 14, 0.89);
 } 
 .icons {
     max-width: 24%;
 }
+.btn:hover > .fa-chevron-right {
+    color: #ffffff;
+}
+.button-p {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    margin-right: 10px;
+}
+
