--- a/style/media-query.css
+++ b/style/media-query.css
@@ -107,6 +107,14 @@
     #form {
         max-width: 460px;
     }
+    .home .content::after {
+        content: '';
+        height: 104%;
+        left: -27px;
+    }
+    .home .content{
+        margin-bottom: 55rem;
+    }
 }
 @media screen and (max-width: 500px){
     #form {
@@ -116,6 +124,11 @@
 @media screen and (max-width: 440px){
     #form {
         max-width: 340px;
+    }
+}
+@media screen and (max-width: 383px){
+    .home .content h3 {
+        font-size: 35px;
     }
 }
 @media screen and (max-width: 370px){
