--- a/style/index.css
+++ b/style/index.css
@@ -15,20 +15,19 @@ html {
     scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
-    width: 10.5px;
+    width: 11.5px;
   }
 ::-webkit-scrollbar-track {
-    border-radius: 10px;
+    border-radius: 1px;
     box-shadow: inset 0 0 100px rgba(100, 91, 91, 0.25);
 }
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background: var(--color-webkit-scrollbar);
+    border-radius: 1px;
+    background: rgb(71, 71, 71);
     transition: all 0.3s ease-out;
 }
   ::-webkit-scrollbar-thumb:hover {
-    border-radius: 10px;
-    background: var(--color-webkit-scrollbar-hover);
+    background: rgb(56, 56, 56);
 }
 
 
@@ -70,15 +69,7 @@ section{
     max-width: 300px;
     margin: 1rem auto;
 }
-.heading-2 {
-    max-width: 400px;
-}
-.heading-3 {
-    max-width: 500px;
-}
-.heading-4 {
-    max-width: 300px;
-}
+
 .heading-1::after {
     content: '';
     position: absolute;
@@ -106,16 +97,6 @@ section{
     height: 7px;
     border-radius: 2px;
     left: -0.8rem;
-    top: 8rem;
-    background: linear-gradient(180deg, #420000, #550000);
-}
-.heading-4::after {
-    content: '';
-    position: absolute;
-    width: 310px;
-    height: 7px;
-    border-radius: 2px;
-    left: 0rem;
     top: 8rem;
     background: linear-gradient(180deg, #420000, #550000);
 }
