--- a/style/media-query.css
+++ b/style/media-query.css
@@ -3,6 +3,17 @@
         margin-bottom: 20rem;
     }
 }
+@media (max-width:1524px) {
+    .video-container{
+        text-align: center;
+    }
+    .about .content {
+        align-items: center;
+    }
+    .heading-1 {
+    max-width: 150px;
+}
+}
 @media (max-width:1900px) {
     .home .content{
         margin-bottom: 32rem;
@@ -246,7 +257,7 @@
         top: 6.2rem;
     }
     .heading-2::after {
-        width: 268px;
+        width: 275px;
         top: 6.4rem;
     }
     .heading-3::after {
@@ -262,5 +273,35 @@
     }
     .heading-3 {
     max-width: 350px;   
+    }
+}
+@media screen and (max-width: 540px) and (max-height: 870px) {
+    .home .content{
+        margin-bottom: 40rem;
+    }
+}
+@media screen and (max-width: 1280px) and (max-height: 800px) {
+    .home .content{
+        margin-bottom: 25rem;
+    }
+}
+@media screen and (max-width: 1024px) and (max-height: 600px) {
+    .home .content{
+        margin-bottom: 15rem;
+    }
+    .home .content h3{
+        font-size: 5rem;
+        color:rgb(0, 0, 0);
+        opacity: 1;
+    }
+}
+@media screen and (max-width: 400px) and (max-height: 700px) {
+    .home .content{
+        margin-bottom: 35rem;
+    }
+}
+@media screen and (max-width: 360px) and (max-height: 740px) {
+    .home .content{
+        margin-bottom: 38rem;
     }
 }
