--- a/style/media-query.css
+++ b/style/media-query.css
@@ -38,16 +38,7 @@
         margin-bottom: 48rem;
     }
 }
-@media (max-width:1111px) {
-    header .logo{
-        margin-left: -30px;
-    }
-}
-@media (max-width:1050px) {
-    header .logo{
-        margin-left: -60px;
-    }
-}
+
 @media (max-width:991px){
     
     html{
@@ -248,6 +239,11 @@
     max-width: 350px;   
     }
 }
+@media screen and (max-width: 430px) {
+    .home .content h3{
+        font-size: 4.5rem;
+    }
+}
 @media screen and (max-width: 390px) {
     .heading{
         font-size: 3.1rem;
@@ -273,6 +269,9 @@
     }
     .heading-3 {
     max-width: 350px;   
+    }
+    .home .content h3{
+        font-size: 3.5rem;
     }
 }
 @media screen and (max-width: 540px) and (max-height: 870px) {
