--- a/style/media-query.css
+++ b/style/media-query.css
@@ -284,6 +284,11 @@
         margin-bottom: 25rem;
     }
 }
+@media screen and (max-width: 480px) and (max-height: 800px) {
+    .home .content{
+        margin-bottom: 40rem;
+    }
+}
 @media screen and (max-width: 1024px) and (max-height: 600px) {
     .home .content{
         margin-bottom: 15rem;
