--- a/style/media-query.css
+++ b/style/media-query.css
@@ -21,7 +21,7 @@
 }
 @media (max-width:1475px) {
     .home .content{
-        margin-bottom:45rem;
+        margin-bottom: 15rem;
     }
 }
 @media (max-width:1275px) {
@@ -180,12 +180,22 @@
     justify-content: center;
     }
 }
+@media screen and (max-width: 2300px) and (max-height: 700px) {
+    .home .content{
+        margin-bottom: 10rem;
+    }
+}
 @media screen and (max-width: 540px) and (max-height: 870px) {
     .home .content{
         margin-bottom: 40rem;
     }
 }
 @media screen and (max-width: 1280px) and (max-height: 800px) {
+    .home .content{
+        margin-bottom: 25rem;
+    }
+}
+@media screen and (max-width: 2180px) and (max-height: 600px) {
     .home .content{
         margin-bottom: 25rem;
     }
